# pycaphlowers

./: .gitignore  .readthedocs.yaml  Makefile  README.md  mkdocs.yaml  pyproject.toml  sonar-project.properties
.github/workflows/: dev-ci.yml  publish.yml  test-release-ci.yml
docs/: index.md
docs/docstring/: example.md
src/pycaphlowers/: __init__.py  example.py
test/: conftest.py  test_example.py
