[project]
name = "pycaphlowers"
dynamic = ["version"]
description = "Mechanical calculation package design of power lines pylons"
authors = [
    { name = "Vincent Roulet" },
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",

    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Natural Language :: English",

    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11,<3.14"
dependencies = [
]

[project.urls]
Homepage = "https://github.com/phlowers/pycaphlowers"
Issues = "https://github.com/phlowers/pycaphlowers/issues"
Documentation = "https://phlowers.readthedocs.io/projects/pycaphlowers/"

[dependency-groups]
dev = [
    "ruff==0.6.1",
    "mypy==1.11.2",
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
]
test = ["pytest==8.3.2", "pytest-cov==5.0.0"]
docs = [
    "mkdocs==1.6.1",
    "mkdocstrings[python]==0.26.2",
    "mkdocs-material==9.5.43",
    "mkdocs-jupyter==0.25.1",
]

all = [
    { include-group = 'dev' },
    { include-group = 'docs' },
    { include-group = 'test' },
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


### Tools configuration

[tool.pdm]
version = { source = "scm", version_format = "pdm_build:format_version" }
distribution = true


[tool.ruff]
target-version = "py311"
line-length = 79


[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true
docstring-code-line-length = 79
indent-style = "space"
quote-style = "preserve"

[tool.ruff.lint]
# Enable the isort rules.
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{test,docs,tools}/*" = ["E402"]

[tool.mypy]
exclude = [
    "virtualenv",
    ".venv*",
    "build",
    "dist",
    "site-packages",
    "tests",
    "docs",
    "doc",
    "examples",
    "example",
]

## Test framework
[tool.pytest.ini_options]
junit_family = "xunit2"
filterwarnings = [
    "ignore::DeprecationWarning",
    # Following warning seems to come from an issue in pandera,
    # see https://github.com/unionai-oss/pandera/issues/1845
    'ignore:use `parametric(<base>, <func>)` as a type instead',
]
addopts = ["-s", "-vv", "-m", "not benchmark and not release_test"]
markers = ["unit_test", "integration", "benchmark", "release_test"]


[tool.coverage.run]
source = ['src']
relative_files = true
